fixed homepage header position on mobile

--- a/src/Pages/css/homepage.css
+++ b/src/Pages/css/homepage.css
@@ -395,7 +395,6 @@ h2 {
   }
 
   .homepage-header {
-    top: 20%;
   }
 }
 @media (max-width: 700px) {
@@ -515,12 +514,8 @@ h2 {
   }
 }
 @media (max-width: 450px) {
-  .small-bbl {
-    width: 25px;
-  }
-
-  .large {
-    width: 50px;
+  .homepage-header {
+    top: 8%;
   }
 
   .bubbles-wrapper {
@@ -533,32 +528,20 @@ h2 {
   }
 }
 @media (max-width: 400px) {
-  .homepage-header {
-    top: 15%;
-  }
   .socials-wrapper {
     top: 64.5px;
   }
   .socials-wrapper ul {
     margin-top: 40px;
   }
-  .landing-page-menu {
-    /* top: 53.5%; */
-  }
 }
 
-@media (max-width: 385px) {
+@media (max-width: 390px) {
   .homepage-header {
-    top: 10%;
-  }
-  .landing-page-menu {
-    top: 58vh;
+    top: 7%;
   }
 }
 @media (max-width: 360px) {
-  .landing-page-menu {
-    /* top: 62vh; */
-  }
 }
 
 @media (min-width: 1024px) and (min-height: 600px) and (max-height: 700px) {
@@ -591,7 +574,7 @@ h2 {
 /* IPAD AIR */
 @media (min-width: 820px) and (max-width: 830px) and (min-height: 1180px) {
   .homepage-header {
-    top: 25%;
+    top: 20%;
   }
   .landing-page-menu {
     /* top: 80vh; */
